--- a/Module-42_5-Browser-API-Conceptual-Practice/type-monster/index.html
+++ b/Module-42_5-Browser-API-Conceptual-Practice/type-monster/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head> 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +23,7 @@
       <div id="display" class="inactive"></div>
 
       <div class="buttons">
-        <button id="starts">START</button>
+        <button id="start">START</button>
       </div>
 
       <div class="divider-container">
